seeders changed, prisma upgraded

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ NODE_ENV=development
 #AUTH
     SALT_ROUNDS=8
     JWT_SECRET=mistercalculus123.@
-    JWT_LIFESPAN=1m
+    JWT_LIFESPAN=1h
 
 #DB CONFIGURATION
    DB_CONNECTION_STRING=mysql://root:root@127.0.0.1:3306/mydb
