--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "dotenv -e .env -- nodemon  server.js",
     "db:create:migration": "dotenv -e .env -- npx prisma migrate dev --create-only",
     "db:migrate": "dotenv -e .env -- npx prisma migrate dev",
+    "db:seed": "dotenv -e .env -- node src/seeders/index.js",
     "db:reset": "dotenv -e .env -- npx prisma migrate reset",
     "fix": "eslint **/*.js --max-warnings=0 --fix",
     "lint": "eslint **/*.js --max-warnings=0",
@@ -17,7 +18,7 @@
   "dependencies": {
     "@hapi/boom": "^9.1.2",
     "@hapi/joi": "^17.1.1",
-    "@prisma/client": "^4.1.0",
+    "@prisma/client": "^4.1.1",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
@@ -46,7 +47,7 @@
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
-    "prisma": "^4.1.0"
+    "prisma": "^4.1.1"
   },
   "keywords": [],
   "description": ""
